--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,45 +2,47 @@
 
 :root {
     --header-height: 3rem;
-    --title-color: #0B0A0A;
-    --text-color: #403A3A;
+    --title-color: #0b0a0a;
+    --text-color: #403a3a;
     --text-color-light: #707070;
-    --container-color: #FAFAFA;
-    --container-color-alt: #F0EFEF;
-    --body-color: #FCFCFC;
+    --container-color: #fafafa;
+    --container-color-alt: #f0efef;
+    --body-color: #fcfcfc;
 
     --body-font: 'Poppins', sans-serif;
     --h1-font-size: 1.5rem;
     --h2-font-size: 1.25rem;
     --h3-font-size: 1rem;
-    --normal-font-size: .938rem;
-    --small-font-size: .875rem;
-    --smaller-font-size: .813rem;
+    --normal-font-size: 0.938rem;
+    --small-font-size: 0.875rem;
+    --smaller-font-size: 0.813rem;
 
     --font-medium: 500;
     --font-semi-bold: 600;
 
-    --mb-1: .5rem;
+    --mb-1: 0.5rem;
     --mb-2: 1rem;
     --mb-3: 1.5rem;
 
     --z-tooltip: 10;
     --z-fixed: 100;
 }
- *, ::before, ::after {
-     box-sizing: border-box;
+*,
+::before,
+::after {
+    box-sizing: border-box;
 }
 
- html {
+html {
     scroll-behavior: smooth;
 }
 
 body.dark-theme {
-    --title-color: #F2F2F2;
-    --text-color: #BFBFBF;
+    --title-color: #f2f2f2;
+    --text-color: #bfbfbf;
     --container-color: #212121;
     --container-color-alt: #181616;
-    --body-color: #2B2B2B;
+    --body-color: #2b2b2b;
 }
 .change-theme {
     position: absolute;
@@ -62,10 +64,16 @@ body {
     background-color: var(--body-color);
     color: var(--text-color);
 }
-h1,h2,h3,ul,p {
+h1,
+h2,
+h3,
+ul,
+p {
     margin: 0;
 }
-h1,h2,h3 {
+h1,
+h2,
+h3 {
     color: var(--title-color);
     font-weight: var(--font-medium);
 }
@@ -88,7 +96,7 @@ img {
     color: var(--title-color);
     font-weight: var(--font-semi-bold);
     text-transform: uppercase;
-    letter-spacing: .35rem;
+    letter-spacing: 0.35rem;
     text-align: center;
     margin-bottom: var(--mb-3);
 }
@@ -109,8 +117,8 @@ img {
     left: 0;
     z-index: var(--z-fixed);
     background-color: var(--body-color);
-    box-shadow: 0 -1px 4px rgba(0,0,0,.1);
-    transition: .3s;
+    box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.1);
+    transition: 0.3s;
 }
 .nav {
     height: var(--header-height);
@@ -126,11 +134,11 @@ img {
         width: 100%;
         padding: 2rem 1.5rem;
         background-color: var(--body-color);
-        box-shadow: 0 1px 4px rgba(0,0,0,.1);
+        box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
         border-radius: 1rem 1rem 0 0;
         z-index: var(--z-fixed);
-        transition: .3s;
-    } 
+        transition: 0.3s;
+    }
 }
 .nav_logo,
 .nav_toggle {
@@ -154,7 +162,7 @@ img {
     flex-direction: column;
     font-size: var(--smaller-font-size);
     color: var(--text-color-light);
-    font-weight: var(--font-medium); 
+    font-weight: var(--font-medium);
 }
 .nav_link:hover {
     color: var(--text-color);
@@ -176,7 +184,7 @@ img {
     gap: 3rem;
 }
 .home_data {
-    gap: .5rem;
+    gap: 0.5rem;
     text-align: center;
 }
 .home_img {
@@ -203,7 +211,7 @@ img {
 }
 .home_icon {
     font-size: 1.2rem;
-    margin-right: .25rem;
+    margin-right: 0.25rem;
 }
 
 .social_link {
@@ -211,14 +219,13 @@ img {
     align-items: center;
     font-size: var(--small-font-size);
     color: var(--text-color);
-    
 }
 .social_link:hover {
     color: var(--title-color);
 }
 .social_icon {
     font-size: 1.2rem;
-    margin-right: .25rem;
+    margin-right: 0.25rem;
 }
 .profile_description {
     text-align: center;
@@ -227,8 +234,7 @@ img {
 .experience_content {
     display: flex;
 }
-.education_title
-.experience_title {
+.education_title .experience_title {
     font-size: var(--h3-font-size);
 }
 .education_studies {
@@ -238,23 +244,26 @@ img {
 .education_year {
     font-size: var(--smaller-font-size);
 }
-.languages_content {
+.languages_content,
+.technologies_content {
     gap: 0;
 }
 .skills_name,
-.languages_name {
+.languages_name,
+.technologies_name {
     display: flex;
     align-items: center;
     margin-bottom: var(--mb-1);
 }
 .skills_circle,
-.languages_circle {
+.languages_circle,
+.technologies_circle {
     display: inline-block;
     width: 5px;
     height: 5px;
     background-color: var(--text-color);
     border-radius: 50%;
-    margin-right: .75rem;
+    margin-right: 0.75rem;
 }
 .experience_time {
     padding-right: 1rem;
@@ -266,10 +275,16 @@ img {
     height: 13px;
     background-color: var(--text-color-light);
     border-radius: 50%;
-    margin-top: .25rem;
+    margin-top: 0.25rem;
 }
-.experience-courses ::before {
-    content: "✓";
+.experience-technologies {
+    margin-left: 30px;
+}
+.experience-course-item::before {
+    content: '✓';
+}
+.experience-technologies::before {
+    content: '•';
 }
 .interests_container {
     grid-template-columns: repeat(3, 1fr);
@@ -280,10 +295,10 @@ img {
     flex-direction: column;
     align-items: center;
 }
-.interests_icon{
+.interests_icon {
     font-size: 1.5rem;
     color: var(--text-color-light);
-    margin-bottom: .25rem;
+    margin-bottom: 0.25rem;
 }
 .scrolltop {
     position: fixed;
@@ -292,11 +307,11 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: .3rem;
+    padding: 0.3rem;
     background-color: var(--container-color-alt);
-    border-radius: .4rem;
+    border-radius: 0.4rem;
     z-index: var(--z-tooltip);
-    transition: .4s;
+    transition: 0.4s;
     visibility: hidden;
 }
 .scrolltop_icon {
@@ -310,7 +325,7 @@ img {
 @media screen and (max-width: 320px) {
     .nav_list {
         grid-template-columns: repeat(2, 1fr);
-        gap: 1rem .5rem;
+        gap: 1rem 0.5rem;
     }
 }
 @media screen and (min-width: 968px) {
@@ -327,9 +342,9 @@ img {
     }
     .resume {
         display: grid;
-        grid-template-columns: .5fr 1fr;
+        grid-template-columns: 0.5fr 1fr;
         background-color: var(--container-color);
-        box-shadow: 0 0 8px rgba(13,12,12,.15);
+        box-shadow: 0 0 8px rgba(13, 12, 12, 0.15);
     }
     .resume_left {
         background-color: var(--container-color-alt);
@@ -345,9 +360,9 @@ img {
     .home_container {
         gap: 1.5rem;
     }
-    .languages_content {
+    .languages_content,
+    .technologies_content {
         grid-template-columns: repeat(3, max-content);
         column-gap: 3.5rem;
     }
-
 }
